# grupo-sia

./: LICENSE  README.md
desafio-18-09-2025/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
desafio-18-09-2025/src/: app.py
desafio-18-09-2025/src/layers/core_logic_layer/container/: container.py
desafio-2025-10-01/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  launch_streamlit_app.py  pyproject.toml
desafio-2025-10-01/scripts/: entrypoint.sh  run_app.py
desafio-2025-10-01/src/: app.py  main.py  main_2.py  run_workflow_executor_postgres.py  streamlit_app_error.py  workflow.py
desafio-2025-10-01/src/layers/business_layer/ai_agents/: workflow_runner.py
desafio-2025-10-01/src/layers/core_logic_layer/container/: container.py
desafio-2025-10-01/src/layers/core_logic_layer/logging/: logger.py
desafio-2025-10-01/src/layers/core_logic_layer/settings/: ai_settings.py  app_settings.py  postgres_settings.py  postgresql_settings.py
desafio-2025-10-01/src/layers/data_access_layer/postgres/: postgres.py
desafio-2025-10-01/src/layers/data_access_layer/postgresql/: postgresql.py
desafio-2025-10-01/src/layers/presentation_layer/: about_page.py  chat_page.py  home_page.py  plotting_page.py  upload_page.py
desafio-final/: .gitignore  Dockerfile.mongodb  Makefile  docker-compose.yml  main.py  pyproject.toml
desafio-final/ai_agents_crew/: crew_orchestrator.py
desafio-final/ai_agents_crew/agents/: csv_reader_agent.py  data_analyst_agent.py
desafio-final/ai_agents_crew/crews/: csv_reading_crew.py
desafio-final/ai_agents_crew/llms/: gemini_llm.py
desafio-final/ai_agents_crew/settings/: settings.py
desafio-final/ai_agents_crew/tasks/: unzip_file_task.py
desafio-final/ai_agents_crew/tools/: pandas_analysis_tool.py  unzip_file_tool.py
desafio-final/apps/client/: Makefile
desafio-final/apps/client/scripts/: run_client.py
desafio-final/apps/server/: Makefile  pyproject.toml
desafio-final/apps/server/scripts/: entrypoint.sh  import_csv_to_mongodb.py  init_mongodb.py  run_server.py
desafio-final/apps/server/src/: __init__.py  main.py  server.py  server_error.py
desafio-final/mongodb/: .env.example
projeto-final-2025-10-30/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  entrypoint.sh  launch_streamlit_app.py  migrate_postgresql_db.py  pyproject.toml
projeto-final-2025-10-30/alembic/: env.py
projeto-final-2025-10-30/data/output/: .gitignore
projeto-final-2025-10-30/src/: main.py  streamlit_app.py
projeto-final-2025-10-30/src/layers/business_layer/ai_agents/: workflow_runner.py
projeto-final-2025-10-30/src/layers/core_logic_layer/container/: container.py
projeto-final-2025-10-30/src/layers/core_logic_layer/settings/: postgresql_settings.py  streamlit_app_settings.py
projeto-final-2025-10-30/src/layers/data_access_layer/postgresql/: postgresql.py
projeto-final-2025-10-30/src/layers/presentation_layer/: about_page.py  home_page.py
projeto-final-2025-10-30/src/layers/presentation_layer/pages/: about_page.py  chat_page.py  data_analysis_page.py  data_modeling_page.py  home_page.py  invoice_analysis_page.py  invoice_ingestion_page.py  invoice_item_analysis_page.py
projeto-final-2025-10-30/src/streamlit_app_layers/ai_layer/: workflow_runner.py
projeto-final-2025-10-30/src/streamlit_app_layers/ai_layer/agents/: csv_mapping_agent.py  data_analysis_agent.py  insert_records_agent.py  supervisor_agent.py  unzip_file_agent.py
projeto-final-2025-10-30/src/streamlit_app_layers/ai_layer/llm/: llm.py
projeto-final-2025-10-30/src/streamlit_app_layers/ai_layer/models/: invoice_ingestion_config_model.py  (+3 more)
projeto-final-2025-10-30/src/streamlit_app_layers/settings_layer/: postgresql_db_settings.py  streamlit_app_settings.py
(+554 files in other folders)
