[project]
name = "desafio-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai[tools]>=0.130.0",
    "litellm>=1.72.0",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.0",
    "streamlit>=1.46.0",
]
