[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beanie>=1.30.0",
    "dependency-injector>=4.48.1",
    "fastapi>=0.115.14",
    "langchain[google-genai,openai]>=0.3.26",
    "langchain-google-genai>=2.1.6",
    "langchain-mongodb>=0.6.2",
    "langchain-openai>=0.3.27",
    "motor>=3.7.1",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
    "langgraph>=0.5.2",
    "langsmith>=0.4.4",
    "langchain-community>=0.3.27",
    "ipython>=9.4.0",
]
